--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <h1 class="f3">Karen</h1>
             <p class="f4">CEO</p>
         </div>
-        <div class="l2"><img src="./Images/leader-2.jpg" alt="">
+        <div class="l2"><img src="./Images/Leader-2.jpg" alt="">
             <h1 class="f3">Jhone Doe</h1>
             <p class="f4">COO</p>
         </div>
