--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
         </div>
         <div class="getIntouch">
             <h1 class="f3">Get in Touch</h1>
-            <p>Some where on earthn <br>Some@Some.com <br> 03124149890
+            <p class="f4">Some where on earthn <br>Some@Some.com <br> 03124149890
             </p>
         </div>
     </div>
-    <div class="footerDown">
+    <div class="footerDown f4">
         Copyright 2022 Logo Ipsum
     </div>
 </footer>
